# lambda

./: .gitattributes  .gitignore  .gitmodules  .ignore  .pre-commit-config.yaml  AGENTS.md  CMakeDoxygenDefaults.cmake  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  Cargo.toml  Doxyfile  README.md  compile_and_run.sh  rustfmt.toml  setup.sh
archive/lambda_cpp/tools/sandbox/: CMakeLists.txt
crates/lambda-platform/: Cargo.toml
crates/lambda-platform/assets/shaders/: triangle.frag  triangles.frag
crates/lambda-platform/src/: lib.rs
crates/lambda-platform/src/gfx/: adapter.rs  api.rs  assembler.rs  buffer.rs  command.rs  fence.rs  framebuffer.rs  gpu.rs  mod.rs  pipeline.rs  render_pass.rs  shader.rs  surface.rs  viewport.rs
crates/lambda-platform/src/rand/: mod.rs
crates/lambda-platform/src/shaderc/: mod.rs
crates/lambda-platform/src/winit/: mod.rs
crates/lambda-rs/: Cargo.toml  README.md
crates/lambda-rs-platform/: Cargo.toml  README.md
crates/lambda-rs-platform/assets/shaders/: triangles.vert
crates/lambda-rs-platform/src/: lib.rs  shaderc.rs
crates/lambda-rs-platform/src/audio/: mod.rs
crates/lambda-rs-platform/src/cpal/: device.rs  mod.rs
crates/lambda-rs-platform/src/egui/: mod.rs  winit.rs
crates/lambda-rs-platform/src/gfx/: api.rs  assembler.rs  buffer.rs  command.rs  framebuffer.rs  gpu.rs  pipeline.rs  resource.rs  shader.rs  surface.rs  viewport.rs
crates/lambda-rs-platform/src/physics/: mod.rs  rapier2d.rs
crates/lambda-rs-platform/src/rand/: mod.rs
crates/lambda-rs-platform/src/shader/: mod.rs  naga.rs  shaderc_backend.rs  types.rs
crates/lambda-rs-platform/src/shaderc/: mod.rs
crates/lambda-rs-platform/src/wgpu/: bind.rs  buffer.rs  command.rs  gpu.rs  instance.rs  mod.rs  pipeline.rs  render_pass.rs  surface.rs  texture.rs  vertex.rs
crates/lambda-rs-platform/src/winit/: mod.rs
crates/lambda-rs-platform/tests/: wgpu_bind_layout_and_group_texture_sampler.rs  wgpu_bind_layout_dim3_and_group.rs  wgpu_texture3d_build_and_upload.rs  wgpu_texture_build_and_upload.rs
crates/lambda-rs/assets/shaders/: triangles.vert
crates/lambda-rs/examples/: audio_sine_wave.rs  immediates.rs  indexed_multi_vertex_buffers.rs  instanced_quads.rs  minimal.rs  offscreen_post.rs  play_slash_sound.rs  push_constants.rs  reflective_room.rs  sound_buffer_load.rs  textured_cube.rs  textured_quad.rs  textured_volume.rs  triangle.rs  triangles.rs  uniform_buffer_triangle.rs
crates/lambda-rs/src/: audio.rs  component.rs  events.rs  lib.rs  pod.rs  runtime.rs
crates/lambda-rs/src/audio/: buffer.rs  error.rs  mod.rs  playback.rs
crates/lambda-rs/src/components/: window.rs
crates/lambda-rs/src/core/: mod.rs
crates/lambda-rs/src/math/: error.rs  matrix.rs  mod.rs  vector.rs
crates/lambda-rs/src/physics/: collider_2d.rs  mod.rs  rigid_body_2d.rs
crates/lambda-rs/src/render/: bind.rs  buffer.rs  color_attachments.rs  command.rs  encoder.rs  gpu.rs  instance.rs  mesh.rs  mod.rs  pipeline.rs  render_pass.rs  render_target.rs  scene_math.rs  shader.rs  surface.rs  target.rs  texture.rs  validation.rs  vertex.rs  viewport.rs  window.rs
crates/lambda-rs/src/runtimes/: application.rs  mod.rs
crates/lambda-rs/src/util/: mod.rs
crates/lambda-rs/tests/: integration.rs  runnables.rs
crates/lambda-rs/tests/physics_2d/: colliders.rs  collision_events.rs  collision_filters.rs  compound_colliders.rs  materials.rs  mod.rs  queries.rs
demos/: README.md
demos/audio/: Cargo.toml
demos/audio/src/: lib.rs  main.rs
demos/physics/: Cargo.toml
demos/physics/src/: lib.rs
demos/render/: Cargo.toml
demos/render/src/: lib.rs  main.rs
lambda/: CPPLINT.cfg  Cargo.toml  build.rs
lambda/assets/shaders/: triangle.vert
lambda/examples/: push_constants.rs  triangle.rs
lambda/src/: Lambda.h  README.md  lambda.rs  lib.rs
lambda/src/Lambda/: Lambda.h
lambda/src/Lambda/concepts/: Number.h  Plot.h  Point.h
lambda/src/Lambda/core/: Application.cpp  Application.h  Core.h  Entrypoint.h  OrthographicCameraController.cpp  OrthographicCameraController.h  Window.h
lambda/src/Lambda/lib/: Assert.h  Concepts.h  File.h  Log.cpp  Log.h  Reverse.h  Time.cpp  Time.h
lambda/src/Lambda/math/: Face.h  Precision.h  Vector.cpp  Vector.h  Vector2.h  Vector3.h
lambda/src/Lambda/profiler/: Profiler.h  Timer.h
lambda/src/components/: component_stack.rs  mod.rs  renderer.rs  window.rs
lambda/src/core/: Application.cpp  Application.h  Core.h  Entrypoint.h  OrthographicCameraController.cpp  OrthographicCameraController.h  Window.h  application.rs  component.rs  event_loop.rs  events.rs  kernel.rs  layer.rs  mod.rs  runnable.rs  runtime.rs  window.rs
lambda/src/core/events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
lambda/src/core/imgui/: ImGuiBuild.h  ImGuiLayer.cpp  ImGuiLayer.h
lambda/src/core/input/: Input.h  KeyCodes.h  MouseButtonCodes.h
lambda/src/core/io/: AsyncTask.cpp  AsyncTask.h  EventLoop.cpp  EventLoop.h
lambda/src/core/layers/: Layer.h  LayerStack.cpp  LayerStack.h
lambda/src/core/memory/: Pointers.h
lambda/src/core/render/: assembler.rs  buffer.rs  command.rs  mesh.rs  mod.rs  pipeline.rs  render_pass.rs  shader.rs  vertex.rs  viewport.rs  window.rs
lambda/src/core/renderer/: Buffer.h  GraphicsContext.h  OrthographicCamera.h  RenderCommand.h  Renderer.cpp  Renderer.h  RendererAPI.h  Shader.h  Texture.h  VertexArray.cpp  VertexArray.h
lambda/src/core/util/: Assert.h  File.h  Log.h  Reverse.h  Time.h
lambda/src/kernels/: mod.rs
lambda/src/lib/: mod.rs
lambda/src/math/: matrix.rs  mod.rs  vector.rs
lambda/src/platform/: mod.rs
lambda/src/platform/gfx/: gpu.rs  mod.rs  pipeline.rs
lambda/src/render/: command.rs  mesh.rs  mod.rs  pipeline.rs  render_pass.rs  vertex.rs  viewport.rs
lambda/src/runnables/: mod.rs
lambda/src/runtimes/: mod.rs
lambda/tests/: CMakeLists.txt  runnables.rs
tools/math/: CMakeLists.txt
tools/math/src/: main.cpp
tools/mathbox/: CMakeLists.txt
tools/mathbox/src/: main.cpp
tools/sandbox/: CMakeLists.txt
tools/sandbox/src/: Application.cpp  Sandbox2D.cpp  Sandbox2D.h
(+770 files in other folders)
