[workspace]

# Sub packages provided by lambda.
members = [
    "crates/lambda-rs",
    "crates/lambda-rs-args",
    "crates/lambda-rs-platform",
    "tools/obj_loader"
]

default-members = [
    "crates/lambda-rs",
    "crates/lambda-rs-args",
    "crates/lambda-rs-platform",
    "tools/obj_loader"
]
