[workspace]
resolver = "2"

# Sub packages provided by lambda.
members = [
  "crates/lambda-rs",
  "crates/lambda-rs-args",
  "crates/lambda-rs-logging",
  "crates/lambda-rs-platform",
  "tools/obj_loader",
  "tools/lambda_audio",
]

default-members = [
  "crates/lambda-rs",
  "crates/lambda-rs-args",
  "crates/lambda-rs-logging",
  "crates/lambda-rs-platform",
  "tools/obj_loader",
]
