[workspace]
resolver = "2"

# Sub packages provided by lambda.
members = [
  "crates/lambda-rs",
  "crates/lambda-rs-args",
  "crates/lambda-rs-logging",
  "crates/lambda-rs-platform",
  "tools/obj_loader",
  "tools/lambda_audio",
  # Demo crates (not built by default; see `default-members`).
  "demos/audio",
  "demos/physics",
  "demos/render",
  "demos/minimal",
]

default-members = [
  "crates/lambda-rs",
  "crates/lambda-rs-args",
  "crates/lambda-rs-logging",
  "crates/lambda-rs-platform",
  "tools/obj_loader",
]
