[package]
name = "lambda"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["graphics", "compute"]
repository = "https://github.com/lambda-sh/lambda"

[lib]
name = "lambda"
path = "src/lib.rs"

[dependencies]
lambda-platform = { path = "../crates/lambda-platform" }

[dev-dependencies]
cargo-audit = "0.16.0"
mockall = "0.11.3"

[features]
detect-platform=["lambda-platform/detect-platform"]
with-vulkan=["lambda-platform/gfx-with-vulkan"]
with-opengl=["lambda-platform/gfx-with-opengl"]
with-dx11=["lambda-platform/gfx-with-dx11"]
with-dx12=["lambda-platform/gfx-with-dx12"]
with-metal=["lambda-platform/gfx-with-metal"]


# ---------------------------- PLATFORM DEPENDENCIES ---------------------------

# Linux dev-dependencies.
[target.'cfg(all(unix, not(target_os = "macos")))'.dev-dependencies]
cargo-tarpaulin = "=0.19.1"
