[package]
name = "lambda-platform"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lambda_platform"
path = "src/lib.rs"

[dependencies]
gfx-hal = "=0.9.0"
winit = "=0.25.0"
shaderc = "=0.7"
cfg-if = "1.0.0"

# GFX-RS backends
gfx-backend-gl = { version="=0.9.0", optional = true }
gfx-backend-metal = { version="=0.9.0", optional = true }
gfx-backend-vulkan = { version="=0.9.0", optional = true }
gfx-backend-dx11 = { version="0.9.0", optional = true }
gfx-backend-dx12 = { version="0.9.0", optional = true }

[features]
default=['gfx-with-opengl', 'winit-windowing', "shaderc/build-from-source"]
winit-windowing=[]
gfx-with-opengl=["dep:gfx-backend-gl"]
gfx-with-vulkan=["dep:gfx-backend-vulkan"]
gfx-with-metal=["dep:gfx-backend-metal"]
gfx-with-dx11=["dep:gfx-backend-dx11"]
gfx-with-dx12=["dep:gfx-backend-dx12"]
