[package]
name = "lambda-platform"
version = "0.1.0"
edition = "2021"

[lib]
name = "lambda_platform"
path = "src/lib.rs"

[dependencies]
gfx-hal = "=0.9.0"
winit = "=0.27.5"
shaderc = "=0.7"
cfg-if = "=1.0.0"
rand = "=0.8.5"
obj-rs = "=0.6.0"

# GFX-RS backends
gfx-backend-gl = { version="=0.9.0", optional = true }
gfx-backend-metal = { version="=0.9.0", optional = true }
gfx-backend-vulkan = { version="=0.9.0", optional = true }
gfx-backend-dx11 = { version="=0.9.0", optional = true }
gfx-backend-dx12 = { version="=0.9.0", optional = true }

[dev-dependencies]
mockall = "=0.11.3"

[features]
default=["shaderc/build-from-source"]
detect-platform=[]
winit-windowing=[]
gfx-with-opengl=["dep:gfx-backend-gl"]
gfx-with-vulkan=["dep:gfx-backend-vulkan"]
gfx-with-metal=["dep:gfx-backend-metal"]
gfx-with-dx11=["dep:gfx-backend-dx11"]
gfx-with-dx12=["dep:gfx-backend-dx12"]

[profile.dev]
crate-type = ["cdylib", "rlib"]
incremental = true

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies.gfx-platform-backend]
package = "gfx-backend-gl"
version = "=0.9.0"

[target.'cfg(all(target_os = "macos"))'.dependencies.gfx-platform-backend]
package = "gfx-backend-metal"
version = "=0.9.0"

[target.'cfg(all(windows))'.dependencies.gfx-platform-backend]
package = "gfx-backend-dx12"
version = "=0.9.0"
