[package]
name = "lambda-rs-platform"
description = "Platform implementations for lambda-rs"
version = "2023.1.30"
edition = "2021"
resolver = "2"
license = "MIT"

[lib]
name = "lambda_platform"
path = "src/lib.rs"

[dependencies]
winit = "=0.29.15"
naga = { version = "=28.0.0", optional = true, default-features = false, features = [
  "spv-out",
  "glsl-in",
  "wgsl-in",
] }
rand = "=0.10.0"
obj-rs = "=0.7.4"
wgpu = { version = "=28.0.0", optional = true, features = ["wgsl", "spirv"] }
pollster = { version = "=0.4.0", optional = true }
lambda-rs-logging = { path = "../lambda-rs-logging", version = "2023.1.30" }
cpal = { version = "=0.17.2", optional = true }
symphonia = { version = "=0.5.5", optional = true, default-features = false, features = [
  "ogg",
  "vorbis",
  "wav",
  "pcm",
] }
rapier2d = { version = "=0.32.0", optional = true }

# Force windows crate to 0.62 to unify wgpu-hal and gpu-allocator dependencies.
# Both crates support this version range, but Cargo may resolve to different
# versions without this explicit constraint.
[target.'cfg(windows)'.dependencies]
windows = "0.62"

[dev-dependencies]
mockall = "=0.14.0"

[features]
default = ["wgpu", "shader-backend-naga"]

shader-backend-naga = ["dep:naga"]

wgpu = [
  "dep:wgpu",
  "dep:pollster",
  "wgpu/wgsl",
  "wgpu/spirv",
  "shader-backend-naga",
]
wgpu-with-vulkan = ["wgpu"]
wgpu-with-metal = ["wgpu", "wgpu/metal"]
wgpu-with-dx12 = ["wgpu", "wgpu/dx12"]
wgpu-with-gl = ["wgpu", "wgpu/webgl"]

# ---------------------------------- AUDIO ------------------------------------

# Umbrella features (disabled by default)
audio = ["audio-device", "audio-decode-wav", "audio-decode-vorbis"]

# Granular feature flags (disabled by default)
audio-device = ["dep:cpal"]
audio-decode-wav = ["dep:symphonia"]
audio-decode-vorbis = ["dep:symphonia"]

# --------------------------------- PHYSICS -----------------------------------

# Umbrella features (disabled by default)
physics-2d = ["dep:rapier2d"]
