[package]
name = "lambda-rs"
description = "A framework for building cross platform graphics & compute applications."
version = "2023.1.27-1"
edition = "2021"
license = "MIT"
keywords = ["graphics", "compute"]
repository = "https://github.com/lambda-sh/lambda"

[lib]
name = "lambda"
path = "src/lib.rs"

[dependencies]
lambda-rs-platform = { path = "../lambda-rs-platform", version = "2023.1.27-1"}

[dev-dependencies]
cargo-audit = "0.16.0"
mockall = "0.11.3"

[features]
default=["lambda-rs-platform/detect-platform"]
detect-platform=["lambda-rs-platform/detect-platform"]
with-vulkan=["lambda-rs-platform/gfx-with-vulkan"]
with-opengl=["lambda-rs-platform/gfx-with-opengl"]
with-dx11=["lambda-rs-platform/gfx-with-dx11"]
with-dx12=["lambda-rs-platform/gfx-with-dx12"]
with-metal=["lambda-rs-platform/gfx-with-metal"]


# ---------------------------- PLATFORM DEPENDENCIES ---------------------------

# Linux dev-dependencies.
[target.'cfg(all(unix, not(target_os = "macos")))'.dev-dependencies]
cargo-tarpaulin = "=0.19.1"
