[package]
name = "lambda-rs"
description = "A framework for building cross platform graphics & compute applications."
version = "2023.1.30"
edition = "2021"
license = "MIT"
keywords = ["graphics", "compute"]
repository = "https://github.com/lambda-sh/lambda"

[lib]
name = "lambda"
path = "src/lib.rs"

[dependencies]
lambda-rs-platform = { path = "../lambda-rs-platform", version = "2023.1.30"}
lambda-rs-logging = { path = "../lambda-rs-logging", version = "2023.1.30" }

[dev-dependencies]
cargo-audit = "0.16.0"
mockall = "0.11.3"

[features]
default=["with-wgpu"]
with-vulkan=["with-wgpu", "lambda-rs-platform/wgpu-with-vulkan"]
with-opengl=["with-wgpu", "lambda-rs-platform/wgpu-with-gl"]
with-dx11=["with-wgpu"]
with-dx12=["with-wgpu", "lambda-rs-platform/wgpu-with-dx12"]
with-metal=["with-wgpu", "lambda-rs-platform/wgpu-with-metal"]
with-wgpu=["lambda-rs-platform/wgpu"]
with-wgpu-vulkan=["with-wgpu", "lambda-rs-platform/wgpu-with-vulkan"]
with-wgpu-metal=["with-wgpu", "lambda-rs-platform/wgpu-with-metal"]
with-wgpu-dx12=["with-wgpu", "lambda-rs-platform/wgpu-with-dx12"]
with-wgpu-gl=["with-wgpu", "lambda-rs-platform/wgpu-with-gl"]
with-shaderc=["lambda-rs-platform/shader-backend-shaderc"]
with-shaderc-build-from-source=[
  "with-shaderc",
  "lambda-rs-platform/shader-backend-shaderc-build-from-source",
]


# ---------------------------- PLATFORM DEPENDENCIES ---------------------------

# Linux dev-dependencies.
[target.'cfg(all(unix, not(target_os = "macos")))'.dev-dependencies]
cargo-tarpaulin = "=0.19.1"
