[package]
name = "lambda-rs"
description = "A framework for building cross platform graphics & compute applications."
version = "2023.1.30"
edition = "2021"
license = "MIT"
keywords = ["graphics", "compute"]
repository = "https://github.com/lambda-sh/lambda"

[lib]
name = "lambda"
path = "src/lib.rs"

[dependencies]
lambda-rs-platform = { path = "../lambda-rs-platform", version = "2023.1.30"}
lambda-rs-logging = { path = "../lambda-rs-logging", version = "2023.1.30" }

[dev-dependencies]
cargo-audit = "0.16.0"
mockall = "0.14.0"

[features]
default=["with-wgpu"]
with-vulkan=["with-wgpu", "lambda-rs-platform/wgpu-with-vulkan"]
with-opengl=["with-wgpu", "lambda-rs-platform/wgpu-with-gl"]
with-dx11=["with-wgpu"]
with-dx12=["with-wgpu", "lambda-rs-platform/wgpu-with-dx12"]
with-metal=["with-wgpu", "lambda-rs-platform/wgpu-with-metal"]
with-wgpu=["lambda-rs-platform/wgpu"]
with-wgpu-vulkan=["with-wgpu", "lambda-rs-platform/wgpu-with-vulkan"]
with-wgpu-metal=["with-wgpu", "lambda-rs-platform/wgpu-with-metal"]
with-wgpu-dx12=["with-wgpu", "lambda-rs-platform/wgpu-with-dx12"]
with-wgpu-gl=["with-wgpu", "lambda-rs-platform/wgpu-with-gl"]

# ---------------------------------- AUDIO ------------------------------------

# Umbrella features
audio = ["audio-output-device", "audio-sound-buffer"]

# Granular feature flags
audio-output-device = ["lambda-rs-platform/audio-device"]
audio-sound-buffer-wav = []
audio-sound-buffer-vorbis = []

# Umbrella feature
audio-sound-buffer = [
  "audio-sound-buffer-wav",
  "audio-sound-buffer-vorbis",
]

# ------------------------------ RENDER VALIDATION -----------------------------
# Granular, opt-in validation flags for release builds. Debug builds enable
# all validations unconditionally via `debug_assertions`.

# Umbrella features
# - render-validation: enable common, configuration-time checks and logs
# - render-validation-strict: includes render-validation + per-draw checks
# - render-validation-all: enables all validations including device probing
render-validation = [
  "render-validation-msaa",
  "render-validation-depth",
  "render-validation-stencil",
  "render-validation-pass-compat",
  "render-validation-render-targets",
]
render-validation-strict = [
  "render-validation",
  "render-validation-encoder",
]
render-validation-all = [
  "render-validation-strict",
  "render-validation-device",
  "render-validation-instancing",
]

# Granular feature flags
# - msaa: sample count validity and mismatch logging
# - depth: depth clear clamping log and depth advisories
# - stencil: stencil/format upgrade advisories
# - pass-compat: color/depth presence compatibility checks at SetPipeline
# - device: device/format probing advisories (may consult platform)
# - encoder: per-draw/encoder-time checks (most expensive)
render-validation-msaa = []
render-validation-depth = []
render-validation-stencil = []
render-validation-pass-compat = []
render-validation-device = []
render-validation-encoder = []
render-validation-instancing = []
render-validation-render-targets = []


# ---------------------------- PLATFORM DEPENDENCIES ---------------------------

# Linux dev-dependencies.
[target.'cfg(all(unix, not(target_os = "macos")))'.dev-dependencies]
cargo-tarpaulin = "=0.19.1"
